// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontFace babel 6 basic 1`] = `
"
fontFace(\\"font-family:MyHelvetica;src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"
`;

exports[`fontFace babel 6 dynamic change import 1`] = `
"
import { fontFace as f } from 'emotion';
f('font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"),local(\\"HelveticaNeue-Bold\\"),url(MgOpenModernaBold.ttf);font-weight:bold;');
fontFace\`
        font-family: MyHelvetica;
        src: local(\\"Helvetica Neue Bold\\"),
            local(\\"HelveticaNeue-Bold\\"),
            url(MgOpenModernaBold.ttf);
        font-weight: bold;
    \`;"
`;

exports[`fontFace babel 6 interpolation 1`] = `
"
fontFace(\\"font-family:\\", fontFamilyName, \\";src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"
`;

exports[`fontFace babel 6 static change import 1`] = `
"
f(\\"font-family:MyHelvetica;src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");
fontFace\`
        font-family: MyHelvetica;
        src: local(\\"Helvetica Neue Bold\\"),
            local(\\"HelveticaNeue-Bold\\"),
            url(MgOpenModernaBold.ttf);
        font-weight: bold;
    \`;"
`;

exports[`fontFace babel 7 basic 1`] = `"fontFace(\\"font-family:MyHelvetica;src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"`;

exports[`fontFace babel 7 dynamic change import 1`] = `
"import { fontFace as f } from 'emotion';
f(\\"font-family:MyHelvetica;src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");
fontFace\`
        font-family: MyHelvetica;
        src: local(\\"Helvetica Neue Bold\\"),
            local(\\"HelveticaNeue-Bold\\"),
            url(MgOpenModernaBold.ttf);
        font-weight: bold;
    \`;"
`;

exports[`fontFace babel 7 interpolation 1`] = `"fontFace(\\"font-family:\\", fontFamilyName, \\";src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"`;

exports[`fontFace babel 7 static change import 1`] = `
"f(\\"font-family:MyHelvetica;src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");
fontFace\`
        font-family: MyHelvetica;
        src: local(\\"Helvetica Neue Bold\\"),
            local(\\"HelveticaNeue-Bold\\"),
            url(MgOpenModernaBold.ttf);
        font-weight: bold;
    \`;"
`;

exports[`fontFace extract babel 6 basic 1`] = `
"import \\"./emotion.css\\";

undefined;


emotion.css
@font-face{font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"), local(\\"HelveticaNeue-Bold\\"), url(MgOpenModernaBold.ttf);font-weight:bold;}"
`;

exports[`fontFace extract babel 6 basic assign to variable 1`] = `
"import \\"./emotion.css\\";

const thisWillBeUndefined = undefined;


emotion.css
@font-face{font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"), local(\\"HelveticaNeue-Bold\\"), url(MgOpenModernaBold.ttf);font-weight:bold;}"
`;

exports[`fontFace extract babel 6 interpolation 1`] = `
"
fontFace(\\"font-family:\\", fontFamilyName, \\";src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"
`;

exports[`fontFace extract babel 7 basic 1`] = `
"import \\"./emotion.css\\";
undefined;


emotion.css
@font-face{font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"), local(\\"HelveticaNeue-Bold\\"), url(MgOpenModernaBold.ttf);font-weight:bold;}"
`;

exports[`fontFace extract babel 7 basic assign to variable 1`] = `
"import \\"./emotion.css\\";
const thisWillBeUndefined = undefined;


emotion.css
@font-face{font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"), local(\\"HelveticaNeue-Bold\\"), url(MgOpenModernaBold.ttf);font-weight:bold;}"
`;

exports[`fontFace extract babel 7 interpolation 1`] = `"fontFace(\\"font-family:\\", fontFamilyName, \\";src:local(\\\\\\"Helvetica Neue Bold\\\\\\"),local(\\\\\\"HelveticaNeue-Bold\\\\\\"),url(MgOpenModernaBold.ttf);font-weight:bold;\\");"`;
